<resources>
    <string name="app_name">E-commerce</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="warning_color">#ff7700</string>
    <string name="color_success">#00c979</string>
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="wishlist">Wishlist</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="your_cart_is_empty">Your cart is empty!</string>
    <string name="add_some_products_to_cart">add some products to cart</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="your_wishlist_is_empty">Your wishlist is empty!</string>
    <string name="add_some_products_to_wishlist_first">add some products to wishlist first</string>
    <string name="add_to_wishlist">Add to wishlist</string>
    <string name="welcome_guest">Welcome Guest</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_to_get_executive_offers_n_and_discounts">Sign in to get executive offers \n and discounts</string>
    <string name="added_to_wishlist">Added to wishlist</string>
    <string name="already_exist_in_wishlist">Already exist in wishlist</string>
    <string name="item_removed_from_cart">Item removed from cart!</string>
    <string name="currency">AED</string>
    <string name="view_more">View More</string>
    <string name="item">" item"</string>
    <string name="error_in_given_information">Error in given information</string>
    <string name="name_should_not_have_number">Name should not have number</string>
    <string name="last_name_should_not_have_numbers">Last Name should not have numbers</string>
    <string name="enter_a_valid_email">Enter a valid email</string>
    <string name="enter_a_valid_phone_number">Enter a valid phone number</string>
    <string name="enter_a_valid_mobile_number">Enter a valid mobile number</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_mobile">Enter mobile</string>
    <string name="enter_mail">Enter mail</string>
    <string name="new_arrival">New Arrival</string>
    <string name="product_is_already_in_your_cart">Product is already in your cart</string>
    <string name="remove_from_wishlist">Removed from wishlist</string>
    <string name="added_to_cart">Added to cart</string>
    <string name="product_already_in_your_cart">Product is already in your cart</string>
    <string name="failed_to_add_product_into_cart">Failed to add product into cart</string>
    <string name="item_removed_from_wishlist">Item removed from wishlist!</string>
    <string name="add_it_for_later">Add it for later</string>
    <string name="oder_summery">ODER SUMMERY</string>
    <string name="important_fields_are_marked_as_red_arrows">important fields are marked as red arrows</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_number">Mobile number</string>
    <string name="phone_number">Phone Number</string>
    <string name="mail_id">Mail Id</string>
    <string name="address_one">Address Line 1</string>
    <string name="address_two">Address Line 2</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="pin_code">Pin Code</string>
    <string name="continue_txt">Continue</string>
    <string name="do_you_want_to_remove_this_item">Do you want to remove this item?</string>
    <string name="no">No</string>
    <string name="remove">Remove</string>
    <string name="title">Title</string>
    <string name="sub_category">sub category</string>
    <string name="price">price</string>
    <string name="description">Description</string>
    <string name="qty">Qty</string>
    <string name="sample_10_aed">10 AED</string>
    <string name="search_result_is_empty">Search result is empty..!</string>
    <string name="details">Details</string>
    <string name="review">Review</string>
    <string name="exit">Exit</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="address1">Address Line 1</string>
    <string name="address2">Address Line 2</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="registration_successful">Registration Successful</string>
    <string name="registration_failed">Registration Failed</string>
    <string name="order_placed">Order placed successfully</string>
    <string name="username_email_mobile">username/email/mobile</string>
    <string name="login_successful">Login successful</string>
    <string name="login_unsuccessful">login unsuccessful</string>
    <string name="order_list">Order list</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="uk_flag">UK flag</string>
    <string name="english">English</string>
    <string name="oman_flag">Oman_flag</string>
    <string name="select_language">Select language</string>
    <string name="search_empty_icon">search empty icon</string>
    <string name="empty_cart_icon">empty cart icon</string>
    <string name="product_image">product image</string>
    <string name="logout">Logout</string>
    <string name="do_you_want_to_logout">Do you want to logout?</string>
    <string name="logout_">Logout!</string>
    <string name="yes">Yes</string>
    <string name="check_icon">check icon</string>
    <string name="contact_person">Contact person :</string>
    <string name="address_one2">Address Line 1 :</string>
    <string name="address_two2">Address Line 2 :</string>
    <string name="phone_number2">Phone number :</string>
    <string name="enter_reference_number">Enter reference number</string>
    <string name="load">Load</string>
    <string name="track_order">Track Order</string>
    <string name="order_history">Order History</string>
    <string name="mobile">"Mobile: "</string>
    <string name="order_history_details">Order History details</string>
    <string name="no_order_history_found">No Order History found!</string>
    <string name="order_date">Order date</string>
    <string name="address">Address</string>
    <string name="reference_number">Reference Number</string>
    <string name="a_one_time_password_otp_was_send_to_your_registered_mobile_number_n_enter_it_after_it_arrives">A One Time Password (OTP) was send to your registered mobile number!\n Enter it after it arrives</string>
    <string name="terms_and_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="faild_to_verify_please_check_mobile_number">Filed to verify! please check mobile number</string>
    <string name="mobile_number_confirmation">Mobile number confirmation!</string>
    <string name="going_to_use_this_number_verify">We are going to use this number to verify!</string>
    <string name="seconds_remaining">seconds remaining:</string>
    <string name="resend_otp">Resend OTP!</string>
    <string name="enter_otp_please">Enter OTP Please</string>
    <string name="select_country">select country</string>
    <string name="select_city">Select city</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="password_length_must_be">Password length must be 6 characters or more</string>
    <string name="code">Code</string>
    <string name="select_code">select Code</string>
    <string name="forgot_password">forgot password?</string>
    <string name="next">next</string>
    <string name="enter_your_registered_mobile_number_for_resetting_the_password">Enter Your registered mobile number for resetting the password</string>
    <string name="items">" items"</string>
    <string name="remote_service_started">remote_service_started</string>
    <string name="enter_address">Enter Address</string>
    <string name="suggestion">Suggestion</string>
    <string name="complaints">Complaints</string>
    <string name="we_would_love_to_hear_you_thought_concern_or_problem_with_anything_so_we_can_improve">We would love to hear you thought,concern, or problem with anything so we can improve!</string>
    <string name="enter_description">Enter description</string>
    <string name="feedback_posted_thanks_for_your_feedback">Feedback posted! Thanks for your feedback.</string>
    <string name="done">Done!</string>
    <string name="failed">Failed!</string>
    <string name="no_notifications">No Notifications</string>

</resources>