<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_cart"
        android:layout_width="350dp"
        android:layout_height="130dp"
        android:layout_margin="5dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp">

        <RelativeLayout
            android:id="@+id/rl_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/image"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:contentDescription="@string/product_image"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

            <LinearLayout
                android:id="@+id/rl_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/image"
                android:orientation="vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:maxLines="1"
                    android:text="@string/name"
                    android:textColor="@color/color_black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:maxLines="1"
                    android:text="@string/description" />

                <TextView
                    android:id="@+id/qty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:maxLines="1"
                    android:text="@string/qty" />

                <TextView
                    android:id="@+id/after_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:text="@string/sample_10_aed"
                    android:textColor="@color/color_green" />
            </LinearLayout>


        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>