<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_gray_1"
        android:gravity="center_horizontal"
        android:text="@string/do_you_want_to_remove_this_item"
        android:textColor="@color/color_white"
        android:textSize="13sp" />

    <RelativeLayout
        android:id="@+id/card_cart"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@id/title">

        <RelativeLayout
            android:id="@+id/rl_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/image"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/product_image"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

            <LinearLayout
                android:id="@+id/rl_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/image"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:maxLines="1"
                    android:text="@string/name"
                    android:textColor="@color/color_black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:maxLines="2"
                    android:text="@string/description" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/rl_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_toEndOf="@id/image"
                android:gravity="bottom"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_4"
                    android:text="@string/no"
                    android:textAllCaps="false"
                    android:textSize="12sp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/remove"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:text="@string/remove"
                    android:textAllCaps="false"
                    android:textColor="#FF0000"
                    android:textSize="12sp"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>