<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:layout_margin="2dp"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.elyeproj.loaderviewlibrary.LoaderImageView
                    android:id="@+id/image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/product_image"
                    app:custom_color="@color/shimmer_bg"/>

                <ImageView
                    android:id="@+id/wish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:contentDescription="@string/wishlist"
                    android:padding="2dp"
                    android:src="@drawable/ic_love_gray" />
            </FrameLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp">


                <com.elyeproj.loaderviewlibrary.LoaderTextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/name"
                    android:ems="10"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/name"
                    android:textColor="@color/color_black"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:custom_color="@color/shimmer_bg"/>

                <com.elyeproj.loaderviewlibrary.LoaderTextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/name"
                    android:layout_centerHorizontal="true"
                    android:text="@string/price"
                    android:textSize="12sp"
                    app:custom_color="@color/shimmer_bg"/>
            </RelativeLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>